# -asl_hash_trie_join

./: .gitignore  README.md
hash_trie_join/: CMakeLists.txt
hash_trie_join/include/hash_trie_join/: benchmark_setup.h  hash_trie.h  hash_trie_join.h  hash_trie_join_build.h  hash_trie_join_probe.h
hash_trie_join/src/: MurmurHash3.c  benchmark_setup.c  hash_trie.c  hash_trie_join.c  hash_trie_join_build.c  hash_trie_join_probe.c  validate_results.c
htj_algo3_no_recurse/: CMakeLists.txt
htj_algo3_no_recurse/include/htj_algo3_no_recurse/: hash_trie.h  hash_trie_join_probe.h
htj_algo3_no_recurse/src/: hash_trie.c  hash_trie_join.c  hash_trie_join_probe.c  timing.c
htj_linked_list_removed/: CMakeLists.txt
htj_linked_list_removed/include/htj_linked_list_removed/: hash_trie.h  hash_trie_join_build.h  hash_trie_join_probe.h
htj_linked_list_removed/include/timing_utils/: tsc_x86.h
htj_linked_list_removed/src/: benchmark_setup.c  hash_trie.c  hash_trie_join.c  hash_trie_join_build.c  hash_trie_join_probe.c  main.c  validate_results.c
htj_partitioning/: CMakeLists.txt
htj_partitioning/include/htj_partitioning/: hash_trie.h  hash_trie_join.h  hash_trie_join_probe.h  partitioning.h  validation.h
htj_partitioning/src/: hash_trie.c  hash_trie_join.c  hash_trie_join_build.c  partitioning.c
htj_remove_all_structs/: CMakeLists.txt
htj_remove_all_structs/include/htj_remove_all_structs/: hash_trie.h  hash_trie_join_build.h  hash_trie_join_probe.h
htj_remove_all_structs/src/: benchmark_setup.c  hash_trie.c  hash_trie_join.c  hash_trie_join_build.c  hash_trie_join_probe.c
htj_separate_attributes/: CMakeLists.txt
htj_separate_attributes/include/htj_separate_attributes/: benchmark_setup.h  hash_trie.h  hash_trie_join_build.h  timing.h
htj_separate_attributes/src/: benchmark_setup.c  hash_trie.c  hash_trie_join.c  hash_trie_join_probe.c  main.c
sql/synthetic/: create_csv.py  drop.sql  load.sql  schema.sql  setup_database.sh
test/: README.md  benchmark0.json  benchmark1.json  benchmark2.json  benchmark3.json  benchmark4.json  benchmarks.json  timing_params.json
